--- a/plugins.config
+++ b/plugins.config
@@ -23,3 +23,5 @@ Plugins>Process, "Exact Signed Euclidean Distance Transform (3D)", fiji.process3
 
 Help, "Upload Sample Image", fiji.util.Fiji_Uploader
 Help, "Help on Menu Item", fiji.help.Context_Help
+
+Image>Color, "Retinex", Retinex_
