--- a/plugins.config
+++ b/plugins.config
@@ -25,3 +25,5 @@ Help, "Upload Sample Image", fiji.util.Fiji_Uploader
 Help, "Help on Menu Item", fiji.help.Context_Help
 
 Image>Color, "Retinex", Retinex_
+
+Analyze, "Shape Index Map", fiji.geom.Shape_Index_Map
