--- a/plugins.config
+++ b/plugins.config
@@ -23,6 +23,8 @@ Plugins>Utilities, "Repeat a Recent Command", fiji.util.Recent_Commands
 Plugins>Process, "Exact Euclidean Distance Transform (3D)", fiji.process3d.EDT
 Plugins>Process, "Exact Signed Euclidean Distance Transform (3D)", fiji.process3d.SEDT
 
+Process>Noise, "ROF Denoise", fiji.denoise.ROF_Denoise
+
 Help, "Upload Sample Image", fiji.util.Fiji_Uploader
 Help, "Help on Menu Item", fiji.help.Context_Help
 
