--- a/build.xml
+++ b/build.xml
@@ -6,11 +6,11 @@
 
 	<property name="builder.name" value="the Fiji team" />
 
-	<property name="fijiDir" 			location="${basedir}/../.." />
+	<property name="ijDir" 			location="${basedir}/../.." />
 	<property name="pluginsDirName"  	value="plugins" />
-	<property name="pluginsDir"  		location="${fijiDir}/${pluginsDirName}" />
-	<property name="srcPluginsDir"  	location="${fijiDir}/src-plugins" />
-	<property name="stagedPluginsDir"  	location="${fijiDir}/staged-plugins" />
+	<property name="pluginsDir"  		location="${ijDir}/${pluginsDirName}" />
+	<property name="srcPluginsDir"  	location="${ijDir}/src-plugins" />
+	<property name="stagedPluginsDir"  	location="${ijDir}/staged-plugins" />
 	<property name="fijiConfigFile"		value="${ant.project.name}.config" />
 	<property name="pluginConfigFile"	value="plugins.config" />
 	<property name="jarName"			value="${ant.project.name}.jar" />
