Add a plugin to print stderr/stdout also to the Log window
This plugin is not intended to be run by the user, but by Fiji,
first thing after ImageJ 1.x has been initialized.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
 			<version>${imagej1.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>net.imagej</groupId>
+			<artifactId>ij-core</artifactId>
+			<version>${imagej.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>com.jcraft</groupId>
 			<artifactId>jsch</artifactId>
 			<version>0.1.42</version>
