Use ImageJ2's sample uploader in Help>Upload Sample Image
With the recent meltdown of the server that used to serve fiji.sc,
we needed to change a couple of things, including the sample image
uploading: the new fiji.sc server is behind a firewall and cannot be
accessed via SSH.

Happily, we did a lot of work there already and implemented a
WebDAV-based uploader in ImageJ2. Now all we need to do is to use
that uploader in Fiji, which is what this commit does.

Requested by Jean-Yves Tinevez.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/pom.xml
+++ b/pom.xml
@@ -38,9 +38,14 @@
 			<version>${imagej.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.jcraft</groupId>
-			<artifactId>jsch</artifactId>
-			<version>${jsch.version}</version>
+			<groupId>net.imagej</groupId>
+			<artifactId>ij-commands</artifactId>
+			<version>${imagej.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>sc.fiji</groupId>
+			<artifactId>fiji-compat</artifactId>
+			<version>${imagej.version}</version>
 		</dependency>
 	</dependencies>
 
