Use fiji.version property for inter-plugin deps
Previously, many Fiji plugins referenced each other using the
imagej.version property, which was not guaranteed to match the version
of the Fiji multimodule project itself (and in fact no longer does, with
the pom-scijava bump to 1.48, since imagej.version now points to the
2.0.0-beta-7 release instead).

--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,12 @@
 		<dependency>
 			<groupId>sc.fiji</groupId>
 			<artifactId>VIB-lib</artifactId>
-			<version>${imagej.version}</version>
+			<version>${fiji.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>sc.fiji</groupId>
 			<artifactId>fiji-lib</artifactId>
-			<version>${imagej.version}</version>
+			<version>${fiji.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>net.imagej</groupId>
@@ -45,7 +45,7 @@
 		<dependency>
 			<groupId>sc.fiji</groupId>
 			<artifactId>fiji-compat</artifactId>
-			<version>${imagej.version}</version>
+			<version>${fiji.version}</version>
 		</dependency>
 	</dependencies>
 
