Add SCM location
Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,13 @@
 		</dependency>
 	</dependencies>
 
+	<scm>
+		<connection>scm:git:git://github.com/fiji/Fiji_Plugins</connection>
+		<developerConnection>scm:git:git@github.com:fiji/Fiji_Plugins</developerConnection>
+		<tag>HEAD</tag>
+		<url>https://github.com/fiji/Fiji_Plugins</url>
+	</scm>
+
 	<repositories>
 		<!-- NB: for project parent, in case of partial checkout -->
 		<repository>
