POM: add missing developer URL

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
 		</contributor>
 		<contributor>
 			<name>Robert Haase</name>
+			<url>http://imagej.net/User:Haesleinhuepf</url>
 			<properties><id>haesleinhuepf</id></properties>
 		</contributor>
 		<contributor>
