--- a/pom.xml
+++ b/pom.xml
@@ -3,17 +3,31 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>sc.fiji</groupId>
-		<artifactId>pom-fiji</artifactId>
-		<version>26.1.1</version>
+		<groupId>org.scijava</groupId>
+		<artifactId>pom-scijava</artifactId>
+		<version>14.0.0</version>
 		<relativePath />
 	</parent>
 
+	<groupId>sc.fiji</groupId>
 	<artifactId>Fiji_Plugins</artifactId>
 	<version>3.1.1-SNAPSHOT</version>
 
-	<name>plugins/Fiji_Plugins.jar</name>
-	<description />
+	<name>Fiji Plugins</name>
+	<description>Fiji Plugins plugin for Fiji.</description>
+	<url>https://imagej.net/Fiji_Plugins</url>
+	<inceptionYear>2009</inceptionYear>
+	<organization>
+		<name>Fiji</name>
+		<url>https://fiji.sc/</url>
+	</organization>
+	<licenses>
+		<license>
+			<name>GNU General Public License v2+</name>
+			<url>https://www.gnu.org/licenses/gpl.html</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
 	<developers>
 		<developer>
@@ -77,6 +91,13 @@
 		</contributor>
 	</contributors>
 
+	<mailingLists>
+		<mailingList>
+			<name>ImageJ Forum</name>
+			<archive>http://forum.imagej.net/</archive>
+		</mailingList>
+	</mailingLists>
+
 	<scm>
 		<connection>scm:git:git://github.com/fiji/Fiji_Plugins</connection>
 		<developerConnection>scm:git:git@github.com:fiji/Fiji_Plugins</developerConnection>
@@ -91,6 +112,13 @@
 		<system>Jenkins</system>
 		<url>http://jenkins.imagej.net/job/Fiji_Plugins/</url>
 	</ciManagement>
+
+	<properties>
+		<package-name>fiji.geom</package-name>
+		<license.licenseName>gpl_v2</license.licenseName>
+		<license.copyrightOwners>Fiji developers.</license.copyrightOwners>
+		<license.projectName>Fiji distribution of ImageJ for the life sciences.</license.projectName>
+	</properties>
 
 	<repositories>
 		<!-- NB: for project parent -->
