--- a/pom.xml
+++ b/pom.xml
@@ -109,8 +109,8 @@
 		<url>https://github.com/fiji/Fiji_Plugins/issues</url>
 	</issueManagement>
 	<ciManagement>
-		<system>Travis CI</system>
-		<url>https://travis-ci.org/fiji/Fiji_Plugins</url>
+		<system>GitHub Actions</system>
+		<url>https://github.com/fiji/Fiji_Plugins/actions</url>
 	</ciManagement>
 
 	<properties>
@@ -120,7 +120,7 @@
 		<license.projectName>Fiji distribution of ImageJ for the life sciences.</license.projectName>
 
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
-		<releaseProfiles>deploy-to-scijava</releaseProfiles>
+		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
 	</properties>
 
 	<repositories>
