POM: Stop using git:// protocol with github.com
The GitHub platform is discontinuing support for it.

See: https://github.blog/2021-09-01-improving-git-protocol-security-github/#whats-changing

--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,7 @@
 	</mailingLists>
 
 	<scm>
-		<connection>scm:git:git://github.com/fiji/Fiji_Plugins</connection>
+		<connection>scm:git:https://github.com/fiji/Fiji_Plugins</connection>
 		<developerConnection>scm:git:git@github.com:fiji/Fiji_Plugins</developerConnection>
 		<tag>HEAD</tag>
 		<url>https://github.com/fiji/Fiji_Plugins</url>
